[package]
name = "uffd-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userfaultfd = { git = "https://github.com/codesandbox/userfaultfd-rs.git", rev = "c1d3c34354e08abb0cc3126227a3fa0b491968db", features = [
  "linux5_7",
] }
nix = "=0.23.1" # pin to the same one as userfaultfd
